--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT = 8080
 DEV_MODE = development
 MONGO_URL = mongodb+srv://desh:desh2000@cluster0.nvhzsqe.mongodb.net/eCommerce
-
+JWT_SECRET = JKjcddnhu132443
